--- a/index.html
+++ b/index.html
@@ -4,20 +4,42 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <script src="https://kit.fontawesome.com/e541811050.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="modal.css">
+
   <title>Space Shooter</title>
 </head>
 <body>
+  <h1>Space Shooter</h1>
   <div id="main-play-area">
+    <p class="score">Score: <span class="score-points">0</span></p>
     <img class="player-shooter" src="./img/hero.png" alt="hero">
-    <h4 class="game-instructions">
+    <p class="game-instructions">
       Não deixe os inimigos invadirem o seu planeta!
-    </h4>
-    <div class="start-button">
-      <h1>START</h1>
+    </p>
+    <button class="start-button">
+      <p>START</p>
+    </button>
+  </div>
+
+  <div class="modal-wrapper">
+    <div class="modal">
+      <button class="modal-close">X</button>
+      <h2 class="modal-title">Game Over</h2>
+      <p class="modal-score">Score: 0</p>
+      <button class="restart">
+        <i class="fas fa-undo-alt"></i>
+        <p>RESET</p>
+      </button>
+      </div>
     </div>
   </div>
+  
   <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
