--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <p class="game-instructions">
       Não deixe os inimigos invadirem o seu planeta!
     </p>
+    <p class="game-instructions">
+     Usa as setas para movimentar para esquerda e direita e a tecla espaço para atirar
+    </p>
     <button class="start-button">
       <p>START</p>
     </button>
